# tauri-monaco

./: index.html  package.json  pnpm-lock.yaml
src/: index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Editor.tsx
